<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/rect_boundary"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_small"
    android:padding="@dimen/margin_mini"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_date_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_mini"
            android:gravity="center"
            android:text="@string/demo_date"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_max_min_temp_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/demo_max_min"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_mini"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_avg_temp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/demo_avg_temp"
            android:textSize="@dimen/small_text_size"/>
        <TextView
            android:id="@+id/tv_sunrise_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/demo_sunrise"
            android:paddingTop="@dimen/margin_mini"
            android:textSize="@dimen/small_text_size"/>
        <TextView
            android:id="@+id/tv_sunset_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/demo_sunset"
            android:paddingTop="@dimen/margin_mini"
            android:textSize="@dimen/small_text_size"/>
    </LinearLayout>
</LinearLayout>
