<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/city_activity_vertical_margin"
              android:paddingLeft="@dimen/city_activity_horizontal_margin"
              android:paddingRight="@dimen/city_activity_horizontal_margin"
              android:paddingTop="@dimen/city_activity_vertical_margin"
              android:orientation="vertical"
              android:background="@mipmap/background"
              tools:context="com.intellij.weatherwatch.EnterCityActivity" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
                android:id="@+id/tv_city_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_city_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/margin_small"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/tv_city_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/margin_small"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
        <EditText
                android:id="@+id/et_city_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_box_height"
                android:background="@drawable/rect_box"
                android:padding="@dimen/margin_medium"
                android:hint="@string/button_text"
                android:autofillHints="@string/button_text"
                android:inputType="text" />
        <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_box"
                android:layout_gravity="end"
                android:text="@string/button_submit" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:baselineAligned="false">
        <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_gravity="center"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:id="@+id/iv_climate_icon"
                        android:layout_width="@dimen/climate_icon_size"
                        android:layout_height="@dimen/climate_icon_size"
                        android:padding="@dimen/margin_mini"
                        android:contentDescription="@string/icon" />
                <TextView
                        android:id="@+id/tv_current_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/big_text_size"
                        android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_mini"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:id="@+id/iv_location_icon"
                        android:layout_width="@dimen/location_icon_size"
                        android:layout_height="@dimen/location_icon_size"
                        android:padding="@dimen/margin_mini"
                        android:src="@android:drawable/ic_menu_mylocation"
                        android:tint="@android:color/black"
                        android:contentDescription="@string/icon" />
                <TextView
                        android:id="@+id/tv_location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_mini"
                        android:textSize="@dimen/mini_text_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_feels_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/small_text_size"/>
            <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/margin_mini"
                    android:textSize="@dimen/small_text_size"/>
            <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/margin_mini"
                    android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
